updating docs to version 0.1.0

--- a/Humidifier/Resource.html
+++ b/Humidifier/Resource.html
@@ -462,8 +462,7 @@ call, builds the accessor methods to get a speed boost.</p>
 </h3><div class="docstring">
   <div class="discussion">
     
-<p>Patches method_missing to include property accessors
-After the first method
+<p>Patches method_missing to include property accessors After the first method
 call, builds the accessor methods to get a speed boost</p>
 
 
