--- a/Humidifier.html
+++ b/Humidifier.html
@@ -81,7 +81,7 @@
   <dl>
     <dt>Defined in:</dt>
     <dd>lib/humidifier.rb<span class="defines">,<br />
-  lib/humidifier/fn.rb,<br /> lib/humidifier/ref.rb,<br /> lib/humidifier/props.rb,<br /> lib/humidifier/utils.rb,<br /> lib/humidifier/stack.rb,<br /> lib/humidifier/magic.rb,<br /> lib/humidifier/output.rb,<br /> lib/humidifier/loader.rb,<br /> lib/humidifier/mapping.rb,<br /> lib/humidifier/version.rb,<br /> lib/humidifier/sleeper.rb,<br /> lib/humidifier/aws_shim.rb,<br /> lib/humidifier/resource.rb,<br /> lib/humidifier/condition.rb,<br /> lib/humidifier/parameter.rb,<br /> lib/humidifier/serializer.rb,<br /> lib/humidifier/sdk_payload.rb,<br /> lib/humidifier/aws_adapters/noop.rb,<br /> lib/humidifier/aws_adapters/base.rb,<br /> lib/humidifier/aws_adapters/sdkv2.rb,<br /> lib/humidifier/aws_adapters/sdkv1.rb,<br /> ext/humidifier/humidifier.c</span>
+  lib/humidifier/fn.rb,<br /> lib/humidifier/ref.rb,<br /> lib/humidifier/stack.rb,<br /> lib/humidifier/utils.rb,<br /> lib/humidifier/props.rb,<br /> lib/humidifier/magic.rb,<br /> lib/humidifier/loader.rb,<br /> lib/humidifier/output.rb,<br /> lib/humidifier/mapping.rb,<br /> lib/humidifier/sleeper.rb,<br /> lib/humidifier/version.rb,<br /> lib/humidifier/aws_shim.rb,<br /> lib/humidifier/resource.rb,<br /> lib/humidifier/parameter.rb,<br /> lib/humidifier/condition.rb,<br /> lib/humidifier/serializer.rb,<br /> lib/humidifier/sdk_payload.rb,<br /> lib/humidifier/aws_adapters/base.rb,<br /> lib/humidifier/aws_adapters/noop.rb,<br /> lib/humidifier/aws_adapters/sdkv2.rb,<br /> lib/humidifier/aws_adapters/sdkv1.rb,<br /> ext/humidifier/humidifier.c</span>
 </dd>
   </dl>
   
@@ -129,7 +129,7 @@
 
 </div>
         </dt>
-        <dd><pre class="code"><span class='tstring'><span class='tstring_beg'>&#39;</span><span class='tstring_content'>0.0.53</span><span class='tstring_end'>&#39;</span></span><span class='period'>.</span><span class='id identifier rubyid_freeze'>freeze</span></pre></dd>
+        <dd><pre class="code"><span class='tstring'><span class='tstring_beg'>&#39;</span><span class='tstring_content'>0.1.0</span><span class='tstring_end'>&#39;</span></span><span class='period'>.</span><span class='id identifier rubyid_freeze'>freeze</span></pre></dd>
       
     </dl>
   
