--- a/Humidifier/Config.html
+++ b/Humidifier/Config.html
@@ -91,10 +91,8 @@
   <div class="discussion">
     
 <p>Pre-setting this module because AWS has a “Config” module and the below
-register method dynamically looks up the
-module to see whether or not it
-exists, which before ruby 2.2 would result in the warning:
-
+register method dynamically looks up the module to see whether or not it
+exists, which before ruby 2.2 would result in the warning: 
 `const_defined?&#39;: Use RbConfig instead of obsolete and deprecated
 Config.</p>
 
