--- a/Humidifier/Fn.html
+++ b/Humidifier/Fn.html
@@ -121,8 +121,7 @@
           <div class="docstring">
   <div class="discussion">
     
-<p>The list of all internal functions provided by AWS from
-<a
+<p>The list of all internal functions provided by AWS from <a
 href="http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/intrinsic-function-reference.html">docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/intrinsic-function-reference.html</a></p>
 
 
